Update JavaFX dependency and add run commands in IntelliJ as comment as reminder